fixes issue 812 + un-replace instead of un-wrap routines that were replaced + add test via unload.exe on new unloadMTd.dll + i#817: suppress CRT possible leaks in tests/unloadMTd.dll   (needed to get new test to pass)
SVN-Revision: 784

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -361,13 +361,18 @@ endif (UNIX)
 if (UNIX)
   tobuild_lib(unloadlib unload.lib.c "-fno-builtin" "")
 else (UNIX)
-  tobuild_lib(unloadlib unload.lib.c "" "/nodefaultlib /noentry")
+  tobuild_lib(unloadlib unload.lib.c "/DUSE_CUSTOM_MALLOC" "/nodefaultlib /noentry")
 endif (UNIX)
 get_relative_location(unloadlib unloadlib_path)
 newtest_ex(unload unload.c "${unloadlib_path}" "" "" OFF "")
 if (UNIX)
   target_link_libraries(unload dl)
 endif (UNIX)
+if (WIN32)
+  tobuild_lib(unloadlibMTd unload.lib.c "/D_DEBUG /MTd" "")
+  get_relative_location(unloadlibMTd unloadlibMTd_path)
+  newtest_nobuild(unloadMTd unload "${unloadlibMTd_path}" "" "" OFF "unload")
+endif (WIN32)
 
 if (NOT TOOL_DR_HEAPSTAT)
   # PR 525807: test malloc stacks
