fixes issue 849 + add option -strict_bitops, off by default, and when on   it matches today's behavior which has no false negatives + when -strict_bitops is off, two relaxations are in added   to handle typical bitfield operations:   + OP_or with a defined value (not enough to just allow non-0 value)     used to set a bitfield var to a non-const-zero value     XXX: could put this on fastpath for perf.     XXX i#489: another sequence used to set is a double xor     sequence which will require pattern matching.   + OP_and with a constant that has only one sequence of 0's and at     least a few 1's, used to set a bitfield var to zero + these try to minimize false negatives.  it's not clear how much   normal code will end up with false negatives with these relaxations. + added a test based on the V8 bitfields that is run with and   without -strict_bitops + -no_strict_bitops eliminates the need for suppressions for   i#513, i#493, i#497m and some of i#791, and probably others that I   did not have a chance to evaluate.  my inclination is to leave in   place the default suppressions for usp10.dll and others for   cases where we run with -strict_bitops.
SVN-Revision: 812

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -330,6 +330,7 @@ newtest(hello hello.c)
 newtest(malloc malloc.c)
 newtest(free free.c)
 newtest(registers registers.c)
+newtest(bitfield bitfield.cpp)
 # linux glibc backtrace on hashtable curiosities causing problems:
 # * making syscalls => hit sysenter hook
 # * w/ -sysenter_is_int80 => calls abort() for some reason
@@ -390,6 +391,7 @@ if (NOT TOOL_DR_HEAPSTAT)
   if (USE_DRSYMS)
     newtest_nobuild(nosymcache malloc "" "-no_use_symcache" "" OFF malloc)
   endif (USE_DRSYMS)
+  newtest_nobuild(strict_bitops bitfield "" "-strict_bitops" "" OFF "bitfield.strict")
 
   # shared by all suppress tests
   tobuild(suppress suppress.c)
