fixes issue 544 + under new option -soft_kills which is Windows-only for now + on seeing NtTerminateProcess of another process, sends a   nudge to that process using dr_nudge_client_ex() from DRi#742 + nudge handler now has two types: leak scan, or terminate + terminate nudge uses dr_exit_process() from DRi#743 to do   a clean exit that includes a leak scan, error and suppression   summary, and symbol and code cache generation + NtTerminateProcess syscall is skipped if the nudge is sent   successfully, which indicates that the target process   is under DR control + added a new test procterm that creates a child whose leak will   only be caught if the parent's termination of the child is   turned into a clean exit
SVN-Revision: 831

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -363,6 +363,9 @@ if (UNIX)
   target_link_libraries(loader dl)
 else (UNIX)
   newtest(winthreads winthreads.c)
+  if (NOT TOOL_DR_HEAPSTAT)
+    newtest(procterm procterm.c)
+  endif (NOT TOOL_DR_HEAPSTAT)
 endif (UNIX)
 
 if (UNIX)
