i#794: replace malloc, parts 6 and 7: the actual allocator and an interface to plug it in
+ add option -replace_malloc
+ relies on drwrap_replace_native() (DRi#760) to
  invoke the replacement routines
  o uses a static OP_ret instr to handle differing
    xl8 from replace_native transformation
+ allocator:
  o allocator is targeted to shadow mode but the
    design allows for adding a headerless implementation
    for pattern mode (i#879) with only additions and
    not major changes by using the same header and free
    list data structures whether co-located or separate
  o allocator is a relatively simple multi-free-list-per-size
    implementation which can be augmented in the future
  o on Linux uses brk until exhausted and then switches to mmap arenas
    which are each extended in-place via mremap until failure
  o large allocs are mmapped and not delay-freed
  o pre-us mallocs are stored in a table
  o existing heap regions are used to iterate over multiple
    arenas
  o large malloc table is used to iterate over mmap chunks
  o using libc mmap for large mallocs for now (xref i#199)
  o using TRY only on drmem queries: so allocator is not
    as robust as I'd like wrt app args, but that costs performance
+ interaction with rest of code:
  o wrap vs replace are multiplexed using a function pointer interface
  o existing client_* interface is used to take shadow or
    profiling or pattern actions on allocs and free
  o existing wrapping code is kept in place as currently
    operators are still wrapped (xref i#882)
+ FIXME before ready for primetime:
  o Windows support: allocator itself, and also turning all
    aux heap routines into nops
  o callstacks: currently empty
  o maintain delay free rbtree
  o obtain alloc type from TLS for mismatch detection
+ TODO nice-to-have:
  o notify DR of brk/mmap
  o replace operators: i#882
  o make alloc routines robust wrt app args
    (simple approach has perf hit)
+ added redzone8 and redzone1024 tests

SVN-Revisi

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -625,6 +625,7 @@ if (TOOL_DR_HEAPSTAT)
     drheapstat/staleness.c
     common/alloc.c
     common/alloc_unopt.c
+    common/alloc_replace.c
     common/heap.c
     common/callstack.c
     common/utils.c
@@ -654,6 +655,7 @@ else (TOOL_DR_HEAPSTAT)
     drmemory/pattern.c
     common/alloc.c
     common/alloc_unopt.c
+    common/alloc_replace.c
     common/heap.c
     common/callstack.c
     drmemory/alloc_drmem.c
