--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -404,6 +404,9 @@ if (NOT TOOL_DR_HEAPSTAT)
   # test this option to exercise the realloc handling code.
   # note that we can't run the realloc test b/c the races will result in unaddrs.
   newtest_nobuild(malloc_noreplace malloc "" "-no_replace_realloc" "" OFF "malloc")
+  # test redzone sizes
+  newtest_nobuild(redzone8 malloc "" "-redzone_size;8" "" OFF "malloc")
+  newtest_nobuild(redzone1024 malloc "" "-redzone_size;1024" "" OFF "malloc")
 
   # shared by all suppress tests
   tobuild(suppress suppress.c)
