fixed issue 892 - rename test register-pattern to register.pattern - adjust pad size without header size
SVN-Revision: 866

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -532,7 +532,7 @@ if (NOT TOOL_DR_HEAPSTAT)
   # pattern mode testing.
   newtest_nobuild(free.pattern free "" "-pattern;0xf1fd;-no_count_leaks" "" OFF "addronly")
   newtest_nobuild(malloc.pattern malloc "" "-pattern;0xf1fd;-no_count_leaks" "" OFF "")
-  newtest_nobuild(registers-pattern registers "" "-pattern;0xf1fd" "" OFF "addronly-reg")
+  newtest_nobuild(registers.pattern registers "" "-pattern;0xf1fd" "" OFF "addronly-reg")
 
 else (NOT TOOL_DR_HEAPSTAT)
   newtest_ex(stale stale.c "" "-staleness;-stale_granularity 100" "" OFF "")
